--- a/index.html
+++ b/index.html
@@ -11,8 +11,39 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="Assets/images/favicon_io/site.webmanifest">
-
-    </head>
+    <style>
+        #chatbot-container {
+            transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+            transform: translateY(20px); /* Start slightly off-screen */
+            opacity: 0;
+            pointer-events: none; /* Prevent interaction when hidden */
+        }
+        #chatbot-container.active {
+            opacity: 1;
+            transform: translateY(0);
+            pointer-events: auto; /* Allow interaction when active */
+        }
+        /* Styles for chat messages */
+        .message {
+            padding: 8px 12px;
+            border-radius: 10px;
+            max-width: 80%;
+            margin-bottom: 8px;
+            word-wrap: break-word;
+        }
+        .message.user {
+            color: #1E40AF; 
+            margin-left: auto; 
+            text-align: right;
+        }
+        .message.bot {
+            background-color: #F3F4F6; 
+            color: #4B5563; 
+            margin-right: auto; /
+            text-align: left;
+        }
+    </style>
+</head>
 <body class="bg-white text-blue-900">
     <!-- Header && Navigation Section -->
     <header class="relative z-10 bg-white shadow-sm">
@@ -454,79 +485,79 @@
 
 
     <!-- Studenst Life -->
-     <section id="student-life" class="py-16 bg-gray-100">
-    <div class="container mx-auto px-4">
-        <h2 class="text-4xl md:text-5xl font-bold text-blue-900 text-center mb-12">Student Life</h2>
+    <section id="student-life" class="py-16 bg-gray-100">
+        <div class="container mx-auto px-4">
+            <h2 class="text-4xl md:text-5xl font-bold text-blue-900 text-center mb-12">Student Life</h2>
 
-        <div class="columns-1 sm:columns-2 lg:columns-3 xl:columns-4 gap-6 max-w-7xl mx-auto">
+            <div class="columns-1 sm:columns-2 lg:columns-3 xl:columns-4 gap-6 max-w-7xl mx-auto">
 
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_one.jpg" alt="Students in a classroom" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_one.jpg" alt="Students in a classroom" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_two.jpg" alt="Students playing outdoor games" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-96 object-cover">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_three.jpg" alt="Graduation ceremony" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/students_four.jpg" alt="Students studying in library" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-64 object-cover">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_one.jpg" alt="Students engaging in group discussion" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_two.jpg" alt="Campus bus" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-80 object-cover">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/students_four.jpg" alt="Students at a campus event" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_one.jpg" alt="Students enjoying lunch" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-72 object-cover">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_three.jpg" alt="Lecture hall during class" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/students_four.jpg" alt="Campus ambulance" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-64 object-cover">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_one.jpg" alt="Students collaborating on project" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_two.jpg" alt="Sports activity on campus" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-96 object-cover">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/students_four.jpg" alt="Student club meeting" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_one.jpg" alt="Computer lab session" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-72 object-cover">
+                </div>
+
+                <div class="mb-6 break-inside-avoid-column">
+                    <img src="Assets/images/student_three.jpg" alt="Campus cafeteria" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                </div>
+
             </div>
 
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_two.jpg" alt="Students playing outdoor games" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-96 object-cover">
+            <div class="text-center mt-12">
+                <a href="#" class="inline-block bg-blue-700 text-white px-8 py-4 rounded-full text-xl font-bold hover:bg-blue-800 transition-colors shadow-lg">View Full Gallery</a>
             </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_three.jpg" alt="Graduation ceremony" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/students_four.jpg" alt="Students studying in library" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-64 object-cover">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_one.jpg" alt="Students engaging in group discussion" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_two.jpg" alt="Campus bus" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-80 object-cover">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/students_four.jpg" alt="Students at a campus event" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_one.jpg" alt="Students enjoying lunch" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-72 object-cover">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_three.jpg" alt="Lecture hall during class" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/students_four.jpg" alt="Campus ambulance" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-64 object-cover">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_one.jpg" alt="Students collaborating on project" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_two.jpg" alt="Sports activity on campus" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-96 object-cover">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/students_four.jpg" alt="Student club meeting" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_one.jpg" alt="Computer lab session" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 h-72 object-cover">
-            </div>
-
-            <div class="mb-6 break-inside-avoid-column">
-                <img src="Assets/images/student_three.jpg" alt="Campus cafeteria" class="w-full rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-            </div>
-
         </div>
-
-        <div class="text-center mt-12">
-            <a href="#" class="inline-block bg-blue-700 text-white px-8 py-4 rounded-full text-xl font-bold hover:bg-blue-800 transition-colors shadow-lg">View Full Gallery</a>
-        </div>
-    </div>
-</section>
+    </section>
 
 
     <!-- Chatbot -->
@@ -534,16 +565,23 @@
         <button id="chatbot-toggle" class="bg-blue-600 text-white p-4 rounded-full shadow-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-75">
             <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z"></path></svg>
         </button>
-        <div id="chatbot-container" class="hidden absolute bottom-full right-0 w-80 h-96 bg-white rounded-lg shadow-xl border border-gray-200">
+        <div id="chatbot-container" class="absolute bottom-full right-0 w-80 h-96 bg-white rounded-lg shadow-xl border border-gray-200 flex flex-col">
             <div class="p-4 flex justify-between items-center border-b border-gray-200 bg-blue-600 text-white rounded-t-lg">
                 <h3 class="font-semibold">Hewitt & Bennet Chat</h3>
                 <button id="chatbot-close" class="text-white hover:text-gray-200">&times;</button>
             </div>
-            <div class="p-4 overflow-y-auto h-[calc(100%-60px)]">
-                <p class="text-sm text-gray-600">Hello! How can I assist you with registration today?</p>
+            <div id="chatbot-messages" class="p-4 overflow-y-auto flex-grow">
+                <div class="mb-2 text-sm text-gray-600 self-start">
+                    Hello! How can I assist you with registration today?
                 </div>
+            </div>
+            <div class="p-4 border-t border-gray-200 flex items-center">
+                <input type="text" id="chatbot-input" placeholder="Type your message..." class="flex-grow p-2 border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+                <button id="chatbot-send" class="bg-blue-600 text-white px-4 py-2 rounded-r-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500">Send</button>
+            </div>
         </div>
     </div>
+
 
     <!-- <footer class="bg-blue-900 text-white py-8">
         <div class="container mx-auto px-4 text-center">
@@ -573,18 +611,54 @@
         });
 
         // Chatbot Toggle
-        const chatbotToggle = document.getElementById('chatbot-toggle');
+       const chatbotToggle = document.getElementById('chatbot-toggle');
         const chatbotContainer = document.getElementById('chatbot-container');
         const chatbotClose = document.getElementById('chatbot-close');
+        const chatbotMessages = document.getElementById('chatbot-messages');
+        const chatbotInput = document.getElementById('chatbot-input');
+        const chatbotSend = document.getElementById('chatbot-send');
 
-        if (chatbotToggle && chatbotContainer && chatbotClose) {
-            chatbotToggle.addEventListener('click', () => {
-                chatbotContainer.classList.toggle('hidden');
-            });
-            chatbotClose.addEventListener('click', () => {
-                chatbotContainer.classList.add('hidden');
-            });
+        // Function to toggle chatbot visibility
+        function toggleChatbot() {
+            chatbotContainer.classList.toggle('active');
         }
+
+        // Function to display a message
+        function displayMessage(text, sender) {
+            const messageDiv = document.createElement('div');
+            messageDiv.classList.add('message');
+            messageDiv.classList.add(sender); // 'user' or 'bot'
+            messageDiv.textContent = text;
+            chatbotMessages.appendChild(messageDiv);
+            // Scroll to the bottom
+            chatbotMessages.scrollTop = chatbotMessages.scrollHeight;
+        }
+
+        // Function to handle sending message
+        function sendMessage() {
+            const messageText = chatbotInput.value.trim();
+            if (messageText === '') return; // Don't send empty messages
+
+            displayMessage(messageText, 'user');
+            chatbotInput.value = ''; // Clear input field
+
+            // Simulate static reply from chatbot
+            setTimeout(() => {
+                displayMessage("Thank you for your message! Our team will get back to you shortly.", 'bot');
+            }, 1000); // Reply after 1 second
+        }
+
+        // Event listeners
+        chatbotToggle.addEventListener('click', toggleChatbot);
+        chatbotClose.addEventListener('click', toggleChatbot);
+        chatbotSend.addEventListener('click', sendMessage);
+
+        // Allow sending message with Enter key
+        chatbotInput.addEventListener('keypress', (event) => {
+            if (event.key === 'Enter') {
+                sendMessage();
+            }
+        });
             
         // Hero Carousel Functionality
         const carouselItems = document.querySelectorAll('.carousel-item');
