hero section abroad button added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         .message.bot {
             background-color: #F3F4F6; 
             color: #4B5563; 
-            margin-right: auto; /
+            margin-right: auto; 
             text-align: left;
         }
     </style>
@@ -144,9 +144,12 @@
             <p class="text-xl md:text-2xl mb-8 text-white text-opacity-90 drop-shadow-md">
                 Empowering students to excel globally through industry-focused training and internationally recognized programs</span>.
             </p>
-            <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
-                <a href="#enroll" class="bg-red-600 text-white px-8 py-4 rounded-lg text-xl font-semibold hover:bg-red-700 transition-colors shadow-lg">Enroll Now</a>
-                <a href="#courses" class="border-2 border-white text-white px-8 py-4 rounded-lg text-xl font-semibold hover:bg-white hover:text-blue-900 transition-colors shadow-lg">View Courses</a>
+            <div class="flex flex-col items-center space-y-4">
+                <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
+                    <a href="#enroll" class="bg-red-600 text-white px-8 py-4 rounded-lg text-xl font-semibold hover:bg-red-700 transition-colors shadow-lg">Enroll Now</a>
+                    <a href="#courses" class="border-2 border-white text-white px-8 py-4 rounded-lg text-xl font-semibold hover:bg-white hover:text-blue-900 transition-colors shadow-lg">View Courses</a>
+                </div>
+                <a href="#abroad-opportunities" class="bg-red-600 text-white px-8 py-4 rounded-lg text-xl font-semibold hover:bg-red-700 transition-colors shadow-lg">Abroad Opportunities</a>
             </div>
         </div>
 
